--- a/html/roles.html
+++ b/html/roles.html
@@ -189,19 +189,13 @@
                   <span>Filter</span>
                   <img src="../assests/images/filter-bar.png" alt="filter" />
                 </div>
-                <select name="department" class="select-item department"
+                <select name="department" class="select-item roles-department"
                   onchange="window.app.filterChange(this.value,this.name)">
                   <option value="">Department</option>
-                  <option value="Product Engineering"> Product Engineering </option>
-                  <option value="IT">IT</option>
-                  <option value="UIUX">UIUX</option>
                 </select>
-                <select name="location" class="select-item location"
+                <select name="location" class="select-item roles-location"
                   onchange="window.app.filterChange(this.value,this.name)">
                   <option value="">Location</option>
-                  <option value="Vijayawada">Vijayawada</option>
-                  <option value="Hyderabad">Hyderabad</option>
-                  <option value="Banglore">Banglore</option>
                 </select>
               </div>
               <div class="right-item" id="hideResetBtns">
