--- a/html/employee.html
+++ b/html/employee.html
@@ -321,7 +321,7 @@
                     <button onclick="window.location='index.html'" type="reset">Cancel</button>
                   </div>
                   <div class="add-employee">
-                    <button class="form-add-employee">Add Employee</button>
+                    <button class="form-add-employee" onclick="window.app.handleSubmit(event)">Add Employee</button>
                   </div>
                 </div>
               </div>
